Mise à jour du README avec des informations sur les exceptions Netty durant les tests